FIX: page-builder image block alignment

--- a/web/tailwind/components/page-builder.css
+++ b/web/tailwind/components/page-builder.css
@@ -178,7 +178,7 @@ div {
     }
 
     .pagebuilder-mobile-hidden {
-        @apply hidden md:block;
+        @apply hidden md:inline-block;
     }
 
     .pagebuilder-mobile-only {
